# solvio

./: .all-contributorsrc  .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  DockerfileGpu  DockerfileGpuAmd  DockerfileGpuNvidia  QUICK_START.md  QUICK_START_GRPC.md  README.md  build.rs  coverage.sh  deadlock.sh  docker-compose.deadlock.yaml  docker-compose.yaml  docker-compose.yml  expanded.rs  run.bat  run.sh  run_quality_test.sh  run_win_gpu.bat  shell.nix
benches/search-points/: Cargo.toml  search-points.sh
benches/service/: grpc-search.js  grpc-upsert.js
config/: config.yaml  deb.yaml
docs/: CONTRIBUTING.md  DEVELOPMENT.md  QUICK_START.md
docs/grpc/: docs.md
docs/redoc/: openapi.json
docs/roadmap/: README.md  roadmap-2022.md  roadmap-2023.md  roadmap-2024.md
echo/: Dockerfile  docker-compose-gen.sh
lib/api/: Cargo.toml  build.rs
lib/blob_store/: Cargo.toml
lib/common/cancel/: Cargo.toml
lib/common/dataset/: Cargo.toml
lib/common/dataset/src/: lib.rs
lib/posting_list/: Cargo.toml
lib/rbac/: Cargo.toml
lib/rbac/src/: lib.rs
openapi/: openapi-main.ytt.yaml  openapi-merged.yaml  openapi-service.ytt.yaml  openapi.yaml
shared/: BEFORE_README.md  index.html  package-lock.json  package.json
src/: consensus.rs  greeting.rs  main.rs  settings.rs  startup.rs  tracing.rs
tests/: basic_api_test.sh  basic_grpc_inference_test.sh  basic_grpc_test.sh  basic_internal_grpc_test.sh  basic_multivector_grpc_test.sh  basic_query_grpc_test.sh  basic_sparse_grpc_test.sh  basic_sparse_test.sh  grpc_consistency_check.sh  integration-tests-api-key.sh  integration-tests.sh  openapi_consistency_check.sh  openapi_integration_test.sh  prefault-mmap-pages.sh  pyproject.toml  removes_test.sh  shard-snapshot-api.sh
tools/: clean-old-rocksdb-logs.sh  coverage.sh  entrypoint.sh  generate_docker_compose_cluster.sh  generate_grpc_docs.dockerfile  generate_grpc_docs.sh  generate_openapi_models.sh  integration-test-coverage.sh  smaps-view.py  sync-web-ui.sh
(+350 files in other folders)
