[package]
name = "rbac"
version = "0.0.0"
authors = [
    "Andrey Vasnetsov <andrey@vasnetsov.com>",
    "Solvio Team <info@solvio.tech>",
]
license = "Apache-2.0"
edition = "2021"
publish = false


[dependencies]
jsonwebtoken = "9.2.0"
segment.workspace = true
common.workspace = true 
serde.workspace = true
