[package]
name = "cancel"
version = "0.0.0"
authors = [
    "Andrey Vasnetsov <vasnetsov93@gmail.com>",
    "Solvio Team <info@solvio.tech>",
]
license = "Apache-2.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
